# Proxima-Centauri

./: .gitignore  BUGS.md  CMakeLists.txt  COLLABORATION.md  DEPLOYMENT.md  README.md  TESTING.md  build.sh  check_qt.sh  deploy.sh  ide.txt  install.sh  language.txt  run-tests.sh  testing.sh
.github/workflows/: main.yml
build_test/: CMakeCache.txt  Makefile  compile_commands.json
build_test/centauri/: Makefile
build_test/proxima/: Makefile
centauri/: CMakeLists.txt
centauri/docs/: File-Structure.txt  IDE-GUI-Design.txt  Shortcuts.md  edits-aging.txt  user-guide.md
centauri/docs/Features/: Layer3dView.md  MatrixView.md  Plugins.md  REPL.md  Snippets.md
centauri/docs/how-to/: how-to-use-repl.cpp
centauri/src/: build-ide.sh  main.cpp
centauri/src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  Settings.cpp
centauri/src/compiler/: Protocol.h
centauri/src/core/: CompilerConnector.cpp  CompilerConnector.h  Project.cpp
centauri/src/docs/: DocGenerator.cpp  DocGenerator.h
centauri/src/services/collaboration/: CollaborationService.cpp
centauri/src/services/git/: GitService.h
centauri/src/services/llm/: LLMService.cpp  LLMService.h
centauri/src/services/network/: NetworkAuthService.cpp  NetworkAuthService.h
centauri/src/services/plugins/: PluginManager.cpp  PluginManager.h
centauri/src/testing/: TestFramework.cpp  TestFramework.h
centauri/src/ui/console/: ConsoleTab.cpp  ConsoleTab.h  ConsoleWidget.cpp  ConsoleWidget.h  REPLConsoleTab.cpp  REPLConsoleTab.h  REPLSyntaxHighlighter.cpp  REPLSyntaxHighlighter.h
centauri/src/ui/debugger/: BreakpointManager.h
centauri/src/ui/debugger/visualizers/: CollectionTable.cpp  CollectionTable.h  Layer3DView.cpp  Layer3DView.h  MatrixView.cpp  MatrixView.h  ObjectInspector.cpp  VectorPlot.cpp  VectorPlot.h
centauri/src/ui/dialogs/: AdvancedSearchWidget.cpp  AdvancedSearchWidget.h  BuildDialog.h  BuildReportDialog.cpp  BuildReportDialog.h  CollaborationDialog.cpp  CollaborationDialog.h  CompatibilityReportDialog.cpp  CompatibilityReportDialog.h  FoldingSettingsDialog.cpp  FoldingSettingsDialog.h  LLMAssistantDialog.cpp  LLMAssistantDialog.h  SearchWidget.cpp  SearchWidget.h  SnippetManagerDialog.cpp  SnippetManagerDialog.h
centauri/src/ui/editor/: CodeEditor.cpp  CodeEditor.h  CodeFoldingManager.cpp  CodeFoldingManager.h  CollaborativeTextManager.cpp  CollaborativeTextManager.h  CompletionProvider.cpp  CompletionProvider.h  EditorToolbar.cpp  EditorToolbar.h  RemoteCursorOverlay.cpp  RemoteCursorOverlay.h  SnippetManager.cpp  SnippetManager.h  StatusBar.cpp  StatusBar.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
centauri/src/ui/menu/: MainMenu.cpp  MainMenu.h
centauri/src/utils/: Logger.h
docs/: api.md  build-options.txt  file_structure.txt  run.txt
examples/: complete_demo.prx  parallel.prx
examples/calculator/: calculator.prx  main.prx
ide/docs/: user-guide.md
ide/src/: CMakeLists.txt  README.md  main.cpp  main.cpp~
ide/src/app/: MainWindow.h  Settings.h
ide/src/core/: AutoSaveManager.cpp  AutoSaveManager.h  Module.cpp  Module.h  Project.h
ide/src/services/collaboration/: CollaborationService.h
ide/src/services/git/: GitService.cpp
ide/src/services/llm/: LLMService.h
ide/src/testing/: TestFramework.h
ide/src/ui/debugger/: VariableInspector.h
ide/src/ui/debugger/visualizers/: Layer3DView.cpp  MatrixView.h  VectorPlot.cpp  VectorPlot.h
ide/src/ui/dialogs/: BuildDialog.cpp  BuildReportDialog.h  CollaborationDialog.h  LLMAssistantDialog.h  SettingsDialog.cpp  SettingsDialog.h
ide/src/ui/editor/: CodeEditor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
proxima/: CMakeLists.txt
proxima/docs/: architecture.txt  dbgcontext_and_dbstack.prx  language.txt  runtime.md
proxima/docs/how-to/: how-to-use-debugger.cpp  how-to-use-docgenerator.cpp  how-to-use-llmclient.cpp  how-to-use-runtime.cpp
proxima/examples/: classes.prx  complete_demo.prx  gem_example.prx  hello.prx  hello2.prx  hello3.prx  machine_learning.prx  matrices.prx  matrix_example.prx  repl.txt  time.prx  time_demo.prx
proxima/rules/: build.rules.example  manifest.example
proxima/src/: CMakeLists.txt  main.cpp
proxima/src/codegen/: LLVMCodeGen.h  Optimizer.cpp  Optimizer.h
proxima/src/compiler/: BuildRulesParser.cpp  BuildRulesParser.h  Compiler.cpp  Compiler.h  Config.h
proxima/src/core/: AutoSave.cpp
proxima/src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
proxima/src/parser/: AST.cpp  AST.h  Parser.cpp  Parser.h
proxima/src/runtime/: Debugger.cpp  Debugger.h  Interpreter.cpp  Interpreter.h  Profiler.cpp  Profiler.h  REPL.cpp  REPL.h  Runtime.cpp  Runtime.h  StoryManager.cpp  StoryManager.h  gem.cpp  gem.h  gem.h.gch
proxima/src/semantic/: ArgumentValidator.cpp  ArgumentValidator.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
proxima/src/services/GitIntegration/: GitIntegration.cpp  GitIntegration.h
proxima/src/services/llm/: LLMClient.cpp  LLMClient.h
proxima/src/stdlib/: Collection.cpp  Collection.h  IO.h  Math.cpp  StdLib.cpp  StdLib.h  Time.cpp  Time.h
proxima/src/utils/: CollectionParser.cpp  CollectionParser.h  DocGenerator.cpp  DocGenerator.h  Logger.cpp  Protocol.cpp  Protocol.h
proxima/tests/unit/: runtime_tests.cpp
specs/: language.txt
src/: CMakeLists.txt  CMakeLists0.txt  README.md  build.txt  build1.txt  file_structure.txt
src/codegen/: LLVMCodeGen.cpp
src/compiler/: Config.cpp  Config.h
src/core/: AutoSave.h
src/parser/: AST.h  Parser.cpp
src/runtime/: Debugger.h  Runtime.cpp  Runtime.h
src/semantic/: TypeChecker.cpp
src/services/llm/: LLMClient.cpp
src/stdlib/: IO.cpp
src/utils/: DocGenerator.h  Protocol.h
tests/integration/: collaboration_tests.sh  compiler_tests.sh  generate-test-report.sh  ide_tests.sh  language_tests.sh  performance_tests.sh
tests/unit/: lexer_test.cpp  parser_test.cpp
